III-1736: Remap event-form-opening-hours bindings to event-form

--- a/src/duplication/event-duplication-calendar.directive.html
+++ b/src/duplication/event-duplication-calendar.directive.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="row" ng-show="edc.duplicateFormData.activeCalendarType === 'permanent' || edc.duplicateFormData.activeCalendarType === 'periodic'">
-        <udb-event-form-opening-hours></udb-event-form-opening-hours>
+        <udb-event-form-opening-hours form-data="edc.duplicateFormData"></udb-event-form-opening-hours>
     </div>
 
 </section>
