--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -11,14 +11,23 @@
 </div>
 
 <div ng-if="event">
-  <h1 class="title">{{event.name}}</h1>
+  <h1 class="title" ng-bind="event.name"></h1>
 
   <div class="row">
     <div class="col-sm-3 col-sm-push-9">
-      <div class="list-group" ng-if="isEventEditable(event)">
-        <button class="list-group-item" type="button" ng-click="openEditPage()">Bewerken</button>
-        <button class="list-group-item" type="button" ui-sref='duplication.event({id: event.id})'>Kopiëren en aanpassen</button>
-        <button class="list-group-item" href="#" ng-click="deleteEvent()">Verwijderen</button>
+      <div class="list-group" ng-if="::permissions">
+        <button ng-if="::permissions.editing"
+                class="list-group-item"
+                type="button"
+                ng-click="openEditPage()">Bewerken</button>
+        <button ng-if="::permissions.duplication"
+                class="list-group-item"
+                type="button"
+                ui-sref='duplication.event({id: event.id})'>Kopiëren en aanpassen</button>
+        <button ng-if="::permissions.editing"
+                class="list-group-item"
+                href="#"
+                ng-click="deleteEvent()">Verwijderen</button>
       </div>
     </div>
     <div class="col-sm-9 col-sm-pull-3">
