III-1813 change to dev-links

--- a/src/cultuurkuur/event-cultuurkuur.html
+++ b/src/cultuurkuur/event-cultuurkuur.html
@@ -1,7 +1,7 @@
 <p ng-if="!$ctrl.permission">Dit evenement bevat <a target="_blank" href="{{$ctrl.previewLink}}">extra informatie</a> voor scholen en leekrachten.</p>
 <div ng-if="$ctrl.permission">
     <div ng-if="!$ctrl.showCultuurKuur" class="row">
-
+    Hello world
     </div>
     <div class="alert alert-info" ng-if="$ctrl.showCultuurKuur">
     <p>Vervolledig dit evenement op cultuurkuur.be met extra informatie voor scholen en leerkrachten.</p>
