III-1813 refactoring of factory, controller and detail for event

--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -10,7 +10,7 @@
   </div>
 </div>
 
-<div ng-if="event">
+<div ng-if="finishedLoading()">
   <h1 class="title" ng-bind="event.name"></h1>
 
   <div class="row">
