--- a/src/cultuurkuur/event-cultuurkuur.html
+++ b/src/cultuurkuur/event-cultuurkuur.html
@@ -12,8 +12,7 @@
                         <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
                             <p ng-repeat="field in $ctrl.cultuurKuurInfo.fields">{{field}}</p>
                         </div>
-                        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-
+                        <div class="cultuurkuur-logo" class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
                         </div>
 
                     </div>
