III-1762: Scroll to top of moderation search results on page change

--- a/src/management/moderation/moderation-list.html
+++ b/src/management/moderation/moderation-list.html
@@ -22,7 +22,7 @@
     </div>
 </div>
 
-<div class="row search-result-block" ng-cloak>
+<div id="moderation-search-results" class="row search-result-block" ng-cloak>
     <div class="col-md-12">
         <p class="rv-item-counter">
             <ng-pluralize count="moderator.searchResult.totalItems"
