--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="panel panel-default">
-          <table class="table">
+          <table class="table" id="dashboard-items">
             <tbody>
               <tr udb-dashboard-event-item
                   ng-if="event['@type'] === 'Event'"
