--- a/src/management/roles/roles-list.html
+++ b/src/management/roles/roles-list.html
@@ -41,7 +41,7 @@
                         <th>Opties</th>
                     </tr>
                     </thead>
-                    <tbody id="paged-roles-list">
+                    <tbody>
                     <tr ng-repeat="role in rlc.searchResult.member">
                         <td ng-bind="::role.name"></td>
                         <td>
