--- a/src/cultuurkuur/event-cultuurkuur.html
+++ b/src/cultuurkuur/event-cultuurkuur.html
@@ -12,8 +12,7 @@
                                     <strong>Onderwerp</strong>
                                 </div>
                                 <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
-                            <p ng-repeat="field in $ctrl.cultuurKuurInfo.fields">{{field}}</p>
-
+                                    <p ng-repeat="field in $ctrl.cultuurKuurInfo.fields" ng-bind="field"></p>
                                 </div>
                             </div>
                             <div ng-if="$ctrl.cultuurKuurInfo.targetAudience.length > 0" class="row">
@@ -21,8 +20,7 @@
                                     <strong>Doelgroep</strong>
                                 </div>
                                 <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
-                            <p ng-repeat="target in $ctrl.cultuurKuurInfo.targetAudience">{{target}}</p>
-
+                                    <p ng-repeat="target in $ctrl.cultuurKuurInfo.targetAudience" ng-bind="target"></p>
                                 </div>
                             </div>
                             <div ng-if="$ctrl.cultuurKuurInfo.levels.length > 0" class="row">
@@ -30,8 +28,7 @@
                                     <strong>Geschikt voor</strong>
                                 </div>
                                 <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
-                            <p ng-repeat="level in $ctrl.cultuurKuurInfo.levels">{{level}}</p>
-
+                                    <p ng-repeat="level in $ctrl.cultuurKuurInfo.levels" ng-bind="level"></p>
                                 </div>
                             </div>
                         </div>
