--- a/src/event_form/steps/event-form-step3.html
+++ b/src/event_form/steps/event-form-step3.html
@@ -53,6 +53,7 @@
                      typeahead-min-length="3"
                      typeahead-template-url="templates/place-suggestion.html"
                      typeahead-popup-template-url="templates/place-suggestion-popup.html"
+                     focus-if="!loadingPlaces"
                      udb-auto-scroll/>
               <div class="plaats-adres-resultaat dropdown-menu-no-results"
                    ng-show="(!cityHasLocations() || filteredLocations.length === 0) && locationsSearched">
