--- a/src/cultuurkuur/event-cultuurkuur.html
+++ b/src/cultuurkuur/event-cultuurkuur.html
@@ -1,41 +1,37 @@
 <div class="cultuurkuur-component">
     <p ng-if="::!$ctrl.permission">Dit evenement bevat <a target="_blank" ng-href="{{::$ctrl.previewLink}}">extra informatie</a> voor scholen en leekrachten.</p>
     <div ng-if="::$ctrl.permission">
-        <div ng-if="::!$ctrl.isIncomplete" class="row">
+        <div ng-if="::!$ctrl.isIncomplete">
             <p><i class="fa fa-check-circle text-success" aria-hidden="true"></i> Dit evenement bevat extra informatie voor scholen en leerkrachten.</p>
             <div class="panel panel-default">
                 <div class="panel-body">
                     <div class="row">
-                        <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 cultuurkuur-logo">
                             <div ng-if="::($ctrl.cultuurKuurInfo.fields.length > 0)" class="row">
-                                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                                     <strong>Onderwerp</strong>
                                 </div>
-                                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                                     <p ng-repeat="field in ::$ctrl.cultuurKuurInfo.fields" ng-bind="::field"></p>
                                 </div>
                             </div>
                             <div ng-if="$ctrl.cultuurKuurInfo.targetAudience.length > 0" class="row">
-                                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                                     <strong>Doelgroep</strong>
                                 </div>
-                                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                                     <p ng-repeat="target in ::$ctrl.cultuurKuurInfo.targetAudience" ng-bind="::target"></p>
                                 </div>
                             </div>
                             <div ng-if="$ctrl.cultuurKuurInfo.levels.length > 0" class="row">
-                                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                                     <strong>Geschikt voor</strong>
                                 </div>
-                                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                                     <p ng-repeat="level in ::$ctrl.cultuurKuurInfo.levels" ng-bind="::level"></p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 cultuurkuur-logo">
-                            &nbsp;
-                        </div>
-
                     </div>
                 </div>
                 <div class="panel-footer"> <a ng-href="{{::$ctrl.editLink}}" target="_blank">Wijzig op cultuurkuur.be</a>
