III-1872 remove the line Toegang if audienceType is everyone

--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -54,7 +54,7 @@
                 <td><strong>Type</strong></td>
                 <td>{{event.type.label}}</td>
               </tr>
-              <tr>
+              <tr ng-if="event.audience.audienceType !== 'everyone'">
                 <td><strong>Toegang</strong></td>
                 <td>{{translateAudience(event.audience.audienceType)}}
                 <udb-event-cultuurkuur-component event="event" permission="::permissions.editing" ></udb-event-cultuurkuur-component></td>
