III-1812 show buttons on detail

--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -28,7 +28,9 @@
                 class="list-group-item"
                 href="#"
                 ng-click="deleteEvent()">Verwijderen</button>
+        <udb-moderation-offer  class="list-group-item" offer="event"></udb-moderation-offer>
       </div>
+</div>
     </div>
     <div class="col-sm-9 col-sm-pull-3">
       <ul class="nav nav-tabs">
