III-1812 button styling

--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -28,7 +28,7 @@
                 class="list-group-item"
                 href="#"
                 ng-click="deleteEvent()">Verwijderen</button>
-        <udb-moderation-offer  class="list-group-item" offer="event"></udb-moderation-offer>
+<!--        <udb-moderation-offer class="list-group-item moderation-detail" offer="event"></udb-moderation-offer>-->
       </div>
 </div>
     </div>
