--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -28,9 +28,8 @@
                 class="list-group-item"
                 href="#"
                 ng-click="deleteEvent()">Verwijderen</button>
-<!--        <udb-moderation-offer class="list-group-item moderation-detail" offer="event"></udb-moderation-offer>-->
+        <udb-moderation-offer class="list-group-item moderation-detail" offer="event" next="true"></udb-moderation-offer>
       </div>
-</div>
     </div>
     <div class="col-sm-9 col-sm-pull-3">
       <ul class="nav nav-tabs">
