--- a/src/place-detail/ui/place-detail.html
+++ b/src/place-detail/ui/place-detail.html
@@ -121,26 +121,7 @@
               <col style="width:80%"/>
             </colgroup>
             <tbody>
-              <tr>
-                <td><strong>Publicatiestatus</strong></td>
-                <td>
-                  <span ng-if="place.available"
-                        ng-bind="place.available | date: 'dd / MM / yyyy'">
-                  </span>
-                  <udb-publish-status-component ng-if="!place.available" status="place.workflowStatus"></udb-publish-status-component>
-                </td>
-              </tr>
-              <tr>
-                <td><strong>ID</strong></td>
-                <td>
-                  <ul>
-                    <li ng-repeat="id in placeIds(place)" ng-switch="isUrl(id)">
-                      <a ng-switch-when="true" ng-href="{{id}}" ng-bind="id"></a>
-                      <span ng-switch-when="false" ng-bind="id"></span>
-                    </li>
-                  </ul>
-                </td>
-              </tr>
+              <udb-publish-status-component event="place"></udb-publish-status-component>
             </tbody>
           </table>
         </div>
