III-1856: Unlabel event error handling

--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -74,6 +74,9 @@
                   <div ng-if="labelResponse === 'success'" class="alert alert-success">
                     Het label '{{addedLabel}}' werd succesvol toegevoegd.
                   </div>
+                  <div ng-if="labelResponse === 'unlabelError'" class="alert alert-danger">
+                    <span ng-bind="labelsError"></span>
+                  </div>
                 </td>
               </tr>
               <tr>
