III-1705 altered to feedback

--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -214,7 +214,7 @@
               <col style="width:20%"/>
               <col style="width:80%"/>
             </colgroup>
-            <tbody udb-publish-status="event">
+            <tbody udb-workflow-status="::event">
             </tbody>
           </table>
         </div>
