--- a/src/place-detail/ui/place-detail.html
+++ b/src/place-detail/ui/place-detail.html
@@ -120,7 +120,7 @@
               <col style="width:20%"/>
               <col style="width:80%"/>
             </colgroup>
-            <tbody udb-publish-status="place">
+            <tbody udb-workflow-status="::place">
             </tbody>
           </table>
         </div>
