--- a/src/place-detail/ui/place-detail.html
+++ b/src/place-detail/ui/place-detail.html
@@ -75,6 +75,9 @@
                   <udb-label-select labels="place.labels"
                                     label-added="labelAdded(label)"
                                     label-removed="labelRemoved(label)"></udb-label-select>
+                  <div ng-if="labelResponse === 'unlabelError'" class="alert alert-danger">
+                    <span ng-bind="labelsError"></span>
+                  </div>
                 </td>
               </tr>
               <tr>
