III-1856: Report organisation unlabel errors like place and event

--- a/src/management/organizers/organizer-detail.html
+++ b/src/management/organizers/organizer-detail.html
@@ -70,6 +70,9 @@
             <udb-label-select labels="odc.organizer.labels"
                               label-added="odc.addLabel(label)"
                               label-removed="odc.deleteLabel(label)"></udb-label-select>
+            <div ng-if="odc.labelResponse === 'unlabelError'" class="alert alert-danger">
+                <span ng-bind="odc.labelsError"></span>
+            </div>
         </div>
     </div>
 </div>
