III-1856: Show unlabel errors on search items

--- a/src/search/ui/event.directive.html
+++ b/src/search/ui/event.directive.html
@@ -164,6 +164,9 @@
           <div ng-if="eventCtrl.labelResponse === 'success'" class="alert alert-success">
             Het label '{{eventCtrl.addedLabel}}' werd succesvol toegevoegd.
           </div>
+          <div ng-if="eventCtrl.labelResponse === 'unlabelError'" class="alert alert-danger">
+            <span ng-bind="eventCtrl.labelsError"></span>
+          </div>
         </div>
       </div>
     </div>
