III-1892 factory for openingHours

--- a/src/event_form/steps/event-form-step2.html
+++ b/src/event_form/steps/event-form-step2.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="row" ng-show="eventFormData.activeCalendarType === 'permanent' || eventFormData.activeCalendarType === 'periodic'">
-      <udb-event-form-opening-hours form-data="eventFormData"></udb-event-form-opening-hours>
+      <udb-event-form-opening-hours opening-hours="openingHours"></udb-event-form-opening-hours>
     </div>
 
   </section>
